--- a/src/pl/tomasztopolewski/farm/Main.fxml
+++ b/src/pl/tomasztopolewski/farm/Main.fxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.tomasztopolewski.farm.Main">
+
+<Pane fx:id="paneWelcome" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.tomasztopolewski.farm.Main">
    <children>
       <Label fx:id="labelTitle" alignment="CENTER" layoutY="150.0" prefHeight="100.0" prefWidth="600.0" text="Farm">
          <font>
@@ -12,4 +13,4 @@
          </font></Label>
       <Label fx:id="labelFooter" alignment="CENTER" layoutY="274.0" prefHeight="30.0" prefWidth="600.0" text=""/>
    </children>
-</AnchorPane>
+</Pane>
