--- a/src/pl/tomasztopolewski/farm/Main.fxml
+++ b/src/pl/tomasztopolewski/farm/Main.fxml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.text.Font?>
-
-
-<Pane fx:id="paneWelcome" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.tomasztopolewski.farm.ControllerMain">
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.web.WebView?>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.tomasztopolewski.farm.app.ControllerMain">
    <children>
-      <Label fx:id="labelTitle"/>
-      <Label fx:id="labelFooter"/>
+      <WebView fx:id="web" layoutX="200.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" />
    </children>
-</Pane>
+</AnchorPane>
